@@ -3,9 +3,11 @@ package com.spring.backend.service;
 import com.spring.backend.dto.category.CategoryRequestDto;
 import com.spring.backend.dto.category.CategoryResponseDto;
 import com.spring.backend.entity.CategoryEntity;
+import com.spring.backend.entity.UserEntity;
 import com.spring.backend.repository.CategoryRepository;
+import com.spring.backend.repository.UserRepository;
+import com.spring.backend.service.mapper.CategoryMapper;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -14,6 +16,7 @@ import org.springframework.stereotype.Service;
 public class CategoryServiceImpl implements CategoryService {
 
   private final CategoryRepository categoryRepository;
+  private final UserRepository userRepository;
 
   @Override
   public CategoryResponseDto createCategory(CategoryRequestDto dto) {
@@ -23,14 +26,22 @@ public class CategoryServiceImpl implements CategoryService {
 
     categoryRepository.save(entity);
 
-    return new CategoryResponseDto(entity);
+    return CategoryMapper.toCategoryDto(entity, null);
   }
 
   @Override
   public List<CategoryResponseDto> getAllCategories() {
-    return categoryRepository.findByIsActiveIsTrue().stream()
-        .map(CategoryResponseDto::new)
-        .collect(Collectors.toList());
+    return categoryRepository.findAll().stream()
+        .map(
+            category -> {
+              UserEntity userEntity = null;
+              if (category.getCreatedBy() != null) {
+                userEntity = userRepository.findById(category.getCreatedBy()).orElse(null);
+              }
+
+              return CategoryMapper.toCategoryDto(category, userEntity);
+            })
+        .toList();
   }
 
   @Override
@@ -44,7 +55,7 @@ public class CategoryServiceImpl implements CategoryService {
     entity.setNote(dto.getNote());
 
     categoryRepository.save(entity);
-    return new CategoryResponseDto(entity);
+    return CategoryMapper.toCategoryDto(entity, null);
   }
 
   @Override
